# webcom-sdk-c

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  annotated.html  classes.html  dir_1c2369e41d57eb94a0b674506f9ea632.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.conf  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__auth.html  group__datasync.html  group__hilev.html  group__lolev.html  group__webcom-auth.html  group__webcom-base.html  group__webcom-datasync-cnx.html  group__webcom-general.html  group__webcom-libev.html  group__webcom-log.html  group__webcom-messages.html  group__webcom-on.html  group__webcom-parser.html  group__webcom-requests.html  group__webcom-utils.html  index.html  menudata.js  modules.html  structwc__action__auth__t.html  structwc__action__listen__t.html  structwc__action__merge__t.html  (+106 more)
build-images/: Dockerfile  Dockerfile.alpine  Dockerfile.alpine.build-doc  Dockerfile.centos7  Dockerfile.centos7.build-rpm  Dockerfile.debian9  Dockerfile.debian9.build-deb  Dockerfile.fedora24  Dockerfile.fedora25  Dockerfile.fedora26  Dockerfile.fedora27  Dockerfile.fedora28.build-rpm  Dockerfile.ubuntu16.04  Dockerfile.ubuntu16.04.build-deb  Dockerfile.ubuntu16.10  Dockerfile.ubuntu17.04  Dockerfile.ubuntu17.10  Dockerfile.ubuntu18.04.build-deb  build.sh
cmake/: FindLibev.cmake  FindReadline.cmake
doc/: CMakeLists.txt  doxygen.conf.in
examples/: CMakeLists.txt  legorange-libevent.c  legorange-libuv.c  legorange.c  wcchat.c  wcsh.c
examples/cmake-boilerplate-project/: CMakeLists.txt  README.md
examples/cmake-boilerplate-project/src/: boilerplate.c
include/webcom-c/: .gitignore  webcom-auth.h  webcom-base.h  webcom-callback.h  webcom-cnx.h  webcom-config.h.in  webcom-datasync.h  webcom-eli.h  webcom-event.h  webcom-libev.h  webcom-libevent.h  webcom-libuv.h  webcom-log.h  webcom-msg.h  webcom-on.h  webcom-parser.h  webcom-req.h  webcom-utils.h  webcom.h
lib/: .gitignore  CMakeLists.txt  auth.c  base64.c  base64.h  compat.h.in  connection.c  event.c  event_libs_priv.h  hash.c  hash.h  libev.c  libevent.c  libuv.c  log.c  message.c  parser.c  request.c  sha1.c  sha1.h  system_header_compat.h  webcom.c  webcom_base.c  webcom_base_priv.h  webcom_priv.h
lib/auth/: auth.c  auth_priv.h
lib/collection/: avl.c  avl.h  ht.c  ht.h
lib/datasync/: connection.c  datasync.c  datasync_priv.h  datasync_utils.c  event.c  json.c  json.h  message.c  parser.c  path.c  path.h  request.c  webcom.c  webcom_priv.h
lib/datasync/cache/: treenode.c  treenode.h  treenode_cache.c  treenode_cache.h  treenode_sibs.c  treenode_sibs.h
lib/datasync/listen/: listen_registry.c  listen_registry.h
lib/datasync/on/: on_api.c  on_api.h  on_base.c  on_registry.c  on_registry.h  on_subscription.c  on_subscription.h
pkg/: description.txt  pkg.cmake
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  (+8 more)
src/: connection.c  event.c  message.c  parser.c  request.c  webcom.c  webcom_priv.h
test/: CMakeLists.txt  stfu.h  test-auth.c  test-avl.c  test-cache.c  test-cnx.c  test-misc.c  test-msg.c  test-on-child.c  test-on-data.c  test-on-value.c  test-on.c  test-parser.c  test-path.c  test-req.c  test-treenode.c  test-ws.c
tools/: fsm.c  fsm.h  wcsh.c  wcsh.fsm  wcsh.h  wcsh_parse.c  wcsh_parse.h  wcsh_program.c  wcsh_program.h  wcsh_vt100.c  wcsh_vt100.h
